<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_tool_bar">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/h_tool_bar"
            android:layout_height="@dimen/h_tool_bar"
            android:padding="@dimen/pad_12"
            android:src="@drawable/back" />
        <TextView
            style="@style/st_20_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:layout_marginLeft="@dimen/pad_22"
            android:text="@string/recovery" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/st_14_black_70"
        android:layout_marginTop="@dimen/pad_20"
        android:layout_marginLeft="@dimen/pad_36"
        android:layout_marginRight="@dimen/pad_36"
        android:lineSpacingExtra="@dimen/pad_6"
        android:text="@string/enter_login_or_email"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_28"
        android:layout_marginLeft="@dimen/pad_36"
        android:layout_marginRight="@dimen/pad_36"
        android:textColorHint="@color/black_50"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/st_12_black_50">
        <fitness.sistem.compon.custom_components.ComponEditText
            android:id="@+id/email"
            style="@style/st_16_black"
            android:theme="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:textColorHint="@color/black_50"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/done"
        style="@style/st_button"
        android:letterSpacing="0.14"
        android:layout_marginTop="@dimen/pad_24"
        android:layout_marginLeft="@dimen/pad_36"
        android:layout_marginRight="@dimen/pad_36"
        android:text="@string/send"/>
</LinearLayout>